--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ E-mail: haotianz at pennmedicine dot upenn dot edu
 <ul>
 <li><p>Title 1<br />
 Authors 1 <br />
-The Annals of Statistics, to appear, 2021+. [<a href="NA.pdf">PDF</a>] <br />
+Journal 1.[<a href="NA.pdf">PDF</a>] <br />
 <br /></p>
 </li>
 <li><p>Statistical and Computational Methods for Analysis of Shotgun Metagenomics Sequencing Data<br />
