--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <h1>Haotian Zheng</h1>
 </div>
 <table class="imgtable"><tr><td>
-<img src="<NA>.jpg" alt="alt text" height="309" />&nbsp;</td>
+<img src="Photo/portrait2.jpeg" alt="alt text" height="309" />&nbsp;</td>
 <td align="left"><p>I am currently a Ph.D. candidates in Biostatistics at the University of Pennsylvania under the supervision of <a href="http://statgene.med.upenn.edu/">Dr. Hongzhe Li </a>. Before joining Penn, I completed my B.S. in Mathematics at Tsinghua University in China.
 
 I am passionate and interested in developing novel high-dimensional statistical and machine learning methods for Integrative analysis of real-world data. Specifically, my research focused on theoretical studies on transfer learning and its application to genetics and microbiome data.<br />
