--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
-<div class="menu-category">Hongji Wei</div>
+<div class="menu-category">Haotian Zheng</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="research.html">Research</a></div>
 <div class="menu-item"><a href="teaching.html">Teaching</a></div>
