--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <table class="imgtable"><tr><td>
 <img src="Photo/portrait_2.jpeg" alt="alt text" height="309" />&nbsp;</td>
 <td align="left"><p>I am currently a Ph.D. candidates in Biostatistics at the University of Pennsylvania under the supervision of <a href="http://statgene.med.upenn.edu/">Dr. Hongzhe Li </a>. Before joining Penn, I completed my B.S. in Mathematics at Tsinghua University in China.
-
+</li>
 I am passionate and interested in developing novel high-dimensional statistical and machine learning methods for Integrative analysis of real-world data. Specifically, my research focused on theoretical studies on transfer learning and its application to genetics and microbiome data.<br />
 <br />
 E-mail: haotianz at pennmedicine dot upenn dot edu
@@ -43,12 +43,12 @@ Journal 1.[<a href="NA.pdf">PDF</a>] <br />
 <br /></p>
 </li>
 <li><p>Statistical and Computational Methods for Analysis of Shotgun Metagenomics Sequencing Data<br />
-Hongzhe Li and Haotian Zheng <br />
+  Hongzhe Li and <b>Haotian Zheng</b> <br />
 Frontiers in Probability and the Statistical Sciences, Chapter 2, 2021. [<a href="https://link.springer.com/chapter/10.1007/978-3-030-73351-3_2">PDF</a>]<br />
 <br /></p>
 </li>
 <li><p>A small-sample kernel association test for correlated data with application to microbiome association studies<br />
-Xiang Zhan, Lingzhou Xue, Haotian Zheng, Anna Plantinga, Michael C Wu, Daniel J Schaid, Ni Zhao, Jun Chen <br />
+  Xiang Zhan, Lingzhou Xue, <b>Haotian Zheng</b>, Anna Plantinga, Michael C Wu, Daniel J Schaid, Ni Zhao, Jun Chen <br />
 Genetic Epidemiology, 42(8) (2018): 772-782. [<a href="Paper/AOS1904-057R1A0.pdf">PDF</a>] <br />
 <br /></p>
 </li>
