--- a/index.html
+++ b/index.html
@@ -34,21 +34,41 @@ E-mail: haotianz at pennmedicine dot upenn dot edu
 </td></tr></table>
 <h2>Publications</h2>
 <ul>
-<li><p>Title 1<br />
-Authors 1 <br />
-Journal 1.[<a href="NA.pdf">PDF</a>] <br />
-<br /></p>
-</li>
 <li><p>Statistical and Computational Methods for Analysis of Shotgun Metagenomics Sequencing Data<br />
   Hongzhe Li and <b>Haotian Zheng</b> <br />
-Frontiers in Probability and the Statistical Sciences, Chapter 2, 2021. [<a href="https://link.springer.com/chapter/10.1007/978-3-030-73351-3_2">PDF</a>]<br />
+Statistical Analysis of Microbiome Data, edited by Somnath Datta and Subharup Guba, Springer. [<a href="https://link.springer.com/chapter/10.1007/978-3-030-73351-3_2">Link</a>][<a href="Paper/ShotgunBookChapter_HLI&HZheng.pdf">PDF</a>]<br />
 <br /></p>
 </li>
 <li><p>A small-sample kernel association test for correlated data with application to microbiome association studies<br />
   Xiang Zhan, Lingzhou Xue, <b>Haotian Zheng</b>, Anna Plantinga, Michael C Wu, Daniel J Schaid, Ni Zhao, Jun Chen <br />
-Genetic Epidemiology, 42(8) (2018): 772-782. [<a href="Paper/AOS1904-057R1A0.pdf">PDF</a>] <br />
+Genetic Epidemiology, 42(8) (2018): 772-782. [<a href="https://onlinelibrary.wiley.com/doi/10.1002/gepi.22160">PDF</a>][<a href="Paper/CSKAT_ZhanXueZhengetal.pdf">PDF</a>] <br />
 <br /></p>
 </li>
+<li><p>Proteomic Risk Assessment for Incident Cardiovascular Disease among Individuals with Chronic Kidney Disease<br />
+  Rajat Deo, Ruth Dubin, Yue Ren, Ashwin C. Murthy, Jianqiao Wang, <b>Haotian Zheng</b>, Zihe Zheng, Harold Feldman, Haochang Shou, Josef Coresh, Morgan Grams, Aditya Surapaneni, Zeenat Bhat, Jordana Cohen, Mahboob Rahman, Jiang He, Santosh Saraf, Alan Go, Paul Kimmel, Ramachandran Vasan, Mark Segal, Hongzhe Li, and Peter Ganz  (2022+)<br />
+European Heart Journal, under review. <br />
+<br /></p>
+</li>
+<li><p>Transfer Learning in High Dimensional Linear Discriminant Analysis<br />
+  <b>Haotian Zheng</b>, Sai Li, Hongzhe Li (2022+)<br />
+Ready for submission. <br />
+<br /></p>
+</li>
+<li><p>Transfer Learning Using Summary Statistics with Applications to Polygenetic Risk Score Prediction<br />
+  <b>Haotian Zheng</b>, Sai Li, Hongzhe Li (2022+)<br />
+Ready for submission. <br />
+<br /></p>
+</li>
+<li><p>Transfer Learning Using Summary Statistics with Applications to Polygenetic Risk Score Prediction<br />
+  <b>Haotian Zheng</b>, Sai Li, Hongzhe Li (2022+)<br />
+Ready for submission. <br />
+<br /></p>
+</li>
+<li><p>Identification of Unique Lipidomic Patters in Patients with NAFLD<br />
+  Yedidya Saiman, Eleonora Scorletti, <b>Haotian Zheng</b>, Nadim Mahmud, Qing Liu, Imhoi Koo, Jascha Brettschneider, Sookyoung Jeon, Delfin Buyco, Chelsea Lin, Elliot S. Friedman, Ruona Ughwanogho, Grace Thiele, Emily Toal, Sarah Dwyer, Andrew D. Patterson, Hongzhe Li, Gary D. Wu, Rotonya M. Carr (2022+)<br />
+Ready for submission. <br />
+<br /></p>
+</li>  
 </ul>
 <div id="footer">
 <div id="footer-text">
