--- a/teaching.html
+++ b/teaching.html
@@ -11,21 +11,31 @@
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
-<div class="menu-category">Hongji Wei</div>
+<div class="menu-category">Haotian Zheng</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="research.html">Research</a></div>
 <div class="menu-item"><a href="teaching.html" class="current">Teaching</a></div>
+<div class="menu-item"><a href="CV.html">CV</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
-<h2>Worked as Head Teaching Assistant, University of Pennsylvania</h2>
+<h2>Worked as Teaching Assistant, University of Pennsylvania</h2>
 <ol>
-<li><p>BSTA622 Statistical Inference II: Fall 2020, Fall 2021;</p>
+<li><p>BSTA622 Statistical Inference II: Fall 2020 (Best TA Award), Fall 2021.</p>
+</li>
+</ol>
+<h2>Awards, University of Pennsylvania</h2>
+<ol>
+<li><p>Graduate Student Travel Award (Biomedical Graduate Studies)                             2022</li>
+<li>Graduate Student Teaching Award                                                    2021</li>
+Best student teaching assistant at Graduate Group of Epidemiology and Biostatistics, University of Pennsylvania 
+<li>Jonathan Raz Award                                                               2019</li>
+Best qualifying exam at Graduate Group of Epidemiology and Biostatistics, University of Pennsylvania
+</p>
 </li>
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-12-11 21:02:29 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
