--- a/teaching.html
+++ b/teaching.html
@@ -27,9 +27,9 @@
 <h2>Awards, University of Pennsylvania</h2>
 <ol>
 <li><p>Graduate Student Travel Award (Biomedical Graduate Studies)                             2022</li>
-<li>Graduate Student Teaching Award                                                    2021</li>
+<li><p>Graduate Student Teaching Award                                                    2021</li>
 Best student teaching assistant at Graduate Group of Epidemiology and Biostatistics, University of Pennsylvania 
-<li>Jonathan Raz Award                                                               2019</li>
+<li><p>Jonathan Raz Award                                                               2019</li>
 Best qualifying exam at Graduate Group of Epidemiology and Biostatistics, University of Pennsylvania
 </p>
 </li>
