--- a/teaching.html
+++ b/teaching.html
@@ -26,10 +26,12 @@
 </ol>
 <h2>Awards, University of Pennsylvania</h2>
 <ol>
-<li><p>Graduate Student Travel Award (Biomedical Graduate Studies)                             2022</li>
-<li><p>Graduate Student Teaching Award                                                    2021</li>
-Best student teaching assistant at Graduate Group of Epidemiology and Biostatistics, University of Pennsylvania 
-<li><p>Jonathan Raz Award                                                               2019</li>
+<li><p>2022: Graduate Student Travel Award (Biomedical Graduate Studies)</p>
+</li>
+<li><p>2021: Graduate Student Teaching Award<br />
+Best student teaching assistant at Graduate Group of Epidemiology and Biostatistics, University of Pennsylvania </p>
+</li>
+<li><p>2019: Jonathan Raz Award<br />
 Best qualifying exam at Graduate Group of Epidemiology and Biostatistics, University of Pennsylvania
 </p>
 </li>
