--- a/index.html
+++ b/index.html
@@ -59,16 +59,19 @@ Ready for submission. <br />
 Ready for submission. <br />
 <br /></p>
 </li>
-<li><p>Transfer Learning Using Summary Statistics with Applications to Polygenetic Risk Score Prediction<br />
-  <b>Haotian Zheng</b>, Sai Li, Hongzhe Li (2022+)<br />
-Ready for submission. <br />
-<br /></p>
-</li>
 <li><p>Identification of Unique Lipidomic Patters in Patients with NAFLD<br />
   Yedidya Saiman, Eleonora Scorletti, <b>Haotian Zheng</b>, Nadim Mahmud, Qing Liu, Imhoi Koo, Jascha Brettschneider, Sookyoung Jeon, Delfin Buyco, Chelsea Lin, Elliot S. Friedman, Ruona Ughwanogho, Grace Thiele, Emily Toal, Sarah Dwyer, Andrew D. Patterson, Hongzhe Li, Gary D. Wu, Rotonya M. Carr (2022+)<br />
 Ready for submission. <br />
 <br /></p>
 </li>  
+</ul>
+<h2>Software</h2>
+<ul>
+<li><p>MiRKAT: Microbiome Regression-Based Kernel Association Test<br />
+  <b>Haotian Zheng</b>, Xiang Zhan, Anna Plantinga, Michael Wu and Ni Zhao (2017) <br />
+R package version 1.0. Jul. 2017.  [<a href="http://cran.nexr.com/web/packages/MiRKAT/MiRKAT.pdf">Link</a>]<br />
+<br /></p>
+</li> 
 </ul>
 <div id="footer">
 <div id="footer-text">
