--- a/research.html
+++ b/research.html
@@ -29,9 +29,9 @@
 <p>Statistical models for large-scale complecated data of microbiome, metabolomics, proteomics, etc.</p>
 </li>
 </ol>
-<h1>Papers and Preprints</h1>
+<h1>Ongoing projects</h1>
 <ul>
-<li><p>Distributed Adaptive Gaussian Mean Estimation with Unknown Variance: Interactive Protocols Help Adaptation<br />
+<li><p>Transfer Learning in High Dimensional Linear Discriminant Analysis<br />
 T. Tony Cai and Hongji Wei <br />
 The Annals of Statistics, to appear, 2021+. [<a href="Paper/Distributed-Gaussian-Mean-UnknownVar.pdf">PDF</a>] <br />
 <br /></p>
