--- a/research.html
+++ b/research.html
@@ -29,52 +29,44 @@
 <p>Statistical models for large-scale complecated data of microbiome, metabolomics, proteomics, etc.</p>
 </li>
 </ol>
-<h1>Ongoing projects</h1>
+<h1>Published Works</h1>
+<ul>
+<li><p>Statistical and Computational Methods for Analysis of Shotgun Metagenomics Sequencing Data<br />
+  Hongzhe Li and <b>Haotian Zheng</b> <br />
+Statistical Analysis of Microbiome Data, edited by Somnath Datta and Subharup Guba, Springer. [<a href="https://link.springer.com/chapter/10.1007/978-3-030-73351-3_2">Link</a>][<a href="Paper/ShotgunBookChapter_HLI&HZheng.pdf">PDF</a>]<br />
+<br /></p>
+</li>
+<li><p>A small-sample kernel association test for correlated data with application to microbiome association studies<br />
+  Xiang Zhan, Lingzhou Xue, <b>Haotian Zheng</b>, Anna Plantinga, Michael C Wu, Daniel J Schaid, Ni Zhao, Jun Chen <br />
+Genetic Epidemiology, 42(8) (2018): 772-782. [<a href="https://onlinelibrary.wiley.com/doi/10.1002/gepi.22160">PDF</a>][<a href="Paper/CSKAT_ZhanXueZhengetal.pdf">PDF</a>] <br />
+<br /></p>
+</li>
+<h1>Ongoing Projects: Theoretical</h1>
 <ul>
 <li><p>Transfer Learning in High Dimensional Linear Discriminant Analysis<br />
-T. Tony Cai and Hongji Wei <br />
-The Annals of Statistics, to appear, 2021+. [<a href="Paper/Distributed-Gaussian-Mean-UnknownVar.pdf">PDF</a>] <br />
+  <b>Haotian Zheng</b>, Sai Li, Hongzhe Li (2022+)<br />
+Ready for submission. <br />
 <br /></p>
 </li>
-<li><p>Distributed Nonparametric Function Estimation: Optimal Rate of Convergence and Cost of Adaptation<br />
-T. Tony Cai and Hongji Wei <br />
-The Annals of Statistics, to appear, 2021+. [<a href="Paper/AOS2009-021R1A0-2.pdf">PDF</a>]<br />
-<br /></p>
-</li>
-<li><p>Transfer Learning for Nonparametric Classification: Minimax Rate and Adaptive Classifier<br />
-T. Tony Cai and Hongji Wei <br />
-The Annals of Statistics, 49.1 (2021): 100-128. [<a href="Paper/AOS1904-057R1A0.pdf">PDF</a>] <br />
-<br /></p>
-</li>
-<li><p>Inference of Evolutionary Modules by Low Rank Matrix Decomposition<br />
-Hongji Wei and Jinzhu Jia <br />
-Preprint, 2021. <br />
-<br /></p>
-</li>
-<li><p>Distributed Gaussian Mean Estimation under Communication Constraints: Optimal Fates and Communication-efficient Algorithms<br />
-T. Tony Cai and Hongji Wei <br />
-Preprint, 2019. [<a href="Paper/2001.08877.pdf">PDF</a>] <br />
+<li><p>Transfer Learning Using Summary Statistics with Applications to Polygenetic Risk Score Prediction<br />
+  <b>Haotian Zheng</b>, Sai Li, Hongzhe Li (2022+)<br />
+Ready for submission. <br />
 <br /></p>
 </li>
 </ul>
-<h1>Working Papers</h1>
-<ul>
-<li><p>Distributed Sparse Gaussian Sequence Detection and Classification: Phase Transition and Cost of Adaptation<br />
-T. Tony Cai and Hongji Wei <br />
+<h1>Ongoing Projects: Applied</h1>
+<li><p>Proteomic Risk Assessment for Incident Cardiovascular Disease among Individuals with Chronic Kidney Disease<br />
+  Rajat Deo, Ruth Dubin, Yue Ren, Ashwin C. Murthy, Jianqiao Wang, <b>Haotian Zheng</b>, Zihe Zheng, Harold Feldman, Haochang Shou, Josef Coresh, Morgan Grams, Aditya Surapaneni, Zeenat Bhat, Jordana Cohen, Mahboob Rahman, Jiang He, Santosh Saraf, Alan Go, Paul Kimmel, Ramachandran Vasan, Mark Segal, Hongzhe Li, and Peter Ganz  (2022+)<br />
+European Heart Journal, under review. <br />
 <br /></p>
 </li>
-<li><p>Transfer Learning for Low Rank Matrices<br />
-T. Tony Cai and Hongji Wei <br />
+<li><p>Identification of Unique Lipidomic Patters in Patients with NAFLD<br />
+  Yedidya Saiman, Eleonora Scorletti, <b>Haotian Zheng</b>, Nadim Mahmud, Qing Liu, Imhoi Koo, Jascha Brettschneider, Sookyoung Jeon, Delfin Buyco, Chelsea Lin, Elliot S. Friedman, Ruona Ughwanogho, Grace Thiele, Emily Toal, Sarah Dwyer, Andrew D. Patterson, Hongzhe Li, Gary D. Wu, Rotonya M. Carr (2022+)<br />
+Ready for submission. <br />
 <br /></p>
-</li>
-<li><p>Optimal Crowdsourcing with Low-rank Matrix Approximation<br />
-T. Tony Cai and Hongji Wei <br />
-<br /></p>
-</li>
-<ul>
+</li>  
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-12-11 21:01:12 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
