--- a/research.html
+++ b/research.html
@@ -33,12 +33,12 @@
 <ul>
 <li><p>Statistical and Computational Methods for Analysis of Shotgun Metagenomics Sequencing Data<br />
   Hongzhe Li and <b>Haotian Zheng</b> <br />
-Statistical Analysis of Microbiome Data, edited by Somnath Datta and Subharup Guba, Springer. [<a href="https://link.springer.com/chapter/10.1007/978-3-030-73351-3_2">Link</a>][<a href="Paper/ShotgunBookChapter_HLI&HZheng.pdf">PDF</a>]<br />
+Statistical Analysis of Microbiome Data, edited by Somnath Datta and Subharup Guba, Springer. [<a href="https://link.springer.com/chapter/10.1007/978-3-030-73351-3_2">Link</a>][<a href="Paper/ShotgunBookChapter_HLi&HZheng.pdf">PDF</a>]<br />
 <br /></p>
 </li>
 <li><p>A small-sample kernel association test for correlated data with application to microbiome association studies<br />
   Xiang Zhan, Lingzhou Xue, <b>Haotian Zheng</b>, Anna Plantinga, Michael C Wu, Daniel J Schaid, Ni Zhao, Jun Chen <br />
-Genetic Epidemiology, 42(8) (2018): 772-782. [<a href="https://onlinelibrary.wiley.com/doi/10.1002/gepi.22160">PDF</a>][<a href="Paper/CSKAT_ZhanXueZhengetal.pdf">PDF</a>] <br />
+Genetic Epidemiology, 42(8) (2018): 772-782. [<a href="https://onlinelibrary.wiley.com/doi/10.1002/gepi.22160">Link</a>][<a href="Paper/CSKAT_ZhanXueZhengetal.pdf">PDF</a>] <br />
 <br /></p>
 </li>
 <h1>Ongoing Projects: Theoretical</h1>
