--- a/research.html
+++ b/research.html
@@ -41,30 +41,45 @@ Statistical Analysis of Microbiome Data, edited by Somnath Datta and Subharup Gu
 Genetic Epidemiology, 42(8) (2018): 772-782. [<a href="https://onlinelibrary.wiley.com/doi/10.1002/gepi.22160">Link</a>][<a href="Paper/CSKAT_ZhanXueZhengetal.pdf">PDF</a>] <br />
 <br /></p>
 </li>
+</ul>
 <h1>Ongoing Projects: Theoretical</h1>
 <ul>
 <li><p>Transfer Learning in High Dimensional Linear Discriminant Analysis<br />
-  <b>Haotian Zheng</b>, Sai Li, Hongzhe Li (2022+)<br />
-Ready for submission. <br />
+  <b>Haotian Zheng</b>, Sai Li, Hongzhe Li <br />
 <br /></p>
 </li>
 <li><p>Transfer Learning Using Summary Statistics with Applications to Polygenetic Risk Score Prediction<br />
-  <b>Haotian Zheng</b>, Sai Li, Hongzhe Li (2022+)<br />
-Ready for submission. <br />
+  <b>Haotian Zheng</b>, Sai Li, Hongzhe Li <br />
 <br /></p>
 </li>
 </ul>
 <h1>Ongoing Projects: Applied</h1>
+<ul>
 <li><p>Proteomic Risk Assessment for Incident Cardiovascular Disease among Individuals with Chronic Kidney Disease<br />
   Rajat Deo, Ruth Dubin, Yue Ren, Ashwin C. Murthy, Jianqiao Wang, <b>Haotian Zheng</b>, Zihe Zheng, Harold Feldman, Haochang Shou, Josef Coresh, Morgan Grams, Aditya Surapaneni, Zeenat Bhat, Jordana Cohen, Mahboob Rahman, Jiang He, Santosh Saraf, Alan Go, Paul Kimmel, Ramachandran Vasan, Mark Segal, Hongzhe Li, and Peter Ganz  (2022+)<br />
-European Heart Journal, under review. <br />
+European Heart Journal, under review.
 <br /></p>
 </li>
 <li><p>Identification of Unique Lipidomic Patters in Patients with NAFLD<br />
-  Yedidya Saiman, Eleonora Scorletti, <b>Haotian Zheng</b>, Nadim Mahmud, Qing Liu, Imhoi Koo, Jascha Brettschneider, Sookyoung Jeon, Delfin Buyco, Chelsea Lin, Elliot S. Friedman, Ruona Ughwanogho, Grace Thiele, Emily Toal, Sarah Dwyer, Andrew D. Patterson, Hongzhe Li, Gary D. Wu, Rotonya M. Carr (2022+)<br />
-Ready for submission. <br />
-<br /></p>
+  Yedidya Saiman, Eleonora Scorletti, <b>Haotian Zheng</b>, Nadim Mahmud, Qing Liu, Imhoi Koo, Jascha Brettschneider, Sookyoung Jeon, Delfin Buyco, Chelsea Lin, Elliot S. Friedman, Ruona Ughwanogho, Grace Thiele, Emily Toal, Sarah Dwyer, Andrew D. Patterson, Hongzhe Li, Gary D. Wu, Rotonya M. Carr<br />
+</p>
 </li>  
+</ul>
+<h1>Past Applied Projects</h1>
+<ul>
+<li><p>Food and Resulting Microbiota and Metabolite (FARMM) study<br />
+  Classification of longitudinal alterations in the abundance of fecal metabolites to specify metabolic functions contributed by the gut microbiome. <br />
+<br /></p>
+</li>
+<li><p>PennCHOP IGRAM study<br />
+  Association studies between human microbiome and longitudinal Body Mass Index (BMI) among infants and built a predictive model for the BMI using Random Forrest. <br />
+<br /></p>
+</li> 
+<li><p>iFaM Plasma NMR Targeted metabolites study<br />
+   Analysis of relationship between longitudinal metabolites of different sources and diet for mice using Linear Mixed Models, considering living environment as a random effect. <br />
+<br /></p>
+</li> 
+</ul>
 <div id="footer">
 <div id="footer-text">
 </div>
