--- a/CV.html
+++ b/CV.html
@@ -21,7 +21,7 @@
 <div id="toptitle">
 <h2>CV of Haotian Zheng</h2>
 <ol>
-<li><p>My CV can be found here</p>
+<li><p>My CV can be found [<a href="CV/Curriculum Vitae of Haotian Zheng.pdf">here</a>].</p>
 </li>
 </ol>
 <div id="footer">
