--- a/CV.html
+++ b/CV.html
@@ -19,9 +19,9 @@
 </td>
 <td id="layout-content">
 <div id="toptitle">
-<h2>CV of Haotian Zheng</h2>
+<h2>CV of me</h2>
 <ol>
-<li><p>My CV can be found [<a href="CV/Curriculum Vitae of Haotian Zheng.pdf">here</a>].</p>
+<li><p>My CV can be found <a href="CV/Curriculum Vitae of Haotian Zheng.pdf">here</a>.</p>
 </li>
 </ol>
 <div id="footer">
