--- a/CV.html
+++ b/CV.html
@@ -20,10 +20,10 @@
 <td id="layout-content">
 <div id="toptitle">
 <h2>CV of me</h2>
-<ol>
-<li><p>My CV can be found <a href="CV/Curriculum Vitae of Haotian Zheng.pdf">here</a>.</p>
+<ul>
+<li>My CV can be found <a href="CV/Curriculum Vitae of Haotian Zheng.pdf">here</a>.
 </li>
-</ol>
+</ul>
 <div id="footer">
 <div id="footer-text">
 </div>
