--- a/CV.html
+++ b/CV.html
@@ -21,7 +21,7 @@
 <div id="toptitle">
 <h2>CV of Me</h2>
 <ul>
-<li>My CV can be found <a href="CV/Curriculum Vitae of Haotian Zheng.pdf">here</a>.
+<li>My CV can be found <a href="CV/CV_HaotianZheng.pdf">here</a>.
 </li>
 </ul>
 <div id="footer">
